Changed compiler option detection to new per target standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -248,49 +248,53 @@ endif()
 #####   Manage Compiler Flags
 ################################
 
+set(COMPILE_OPTIONS_PRIVATE)
+set(COMPILE_OPTIONS_PUBLIC)
+set(COMPILE_OPTIONS_INTERFACE)
+
 #Set UNIX (macOS or Linux) compiler flags (clang or gcc). Set optimization level for debug or release.
 if(UNIX)
     message(STATUS "Checking supported compiler flags...")
 
-    enable_c_compiler_flag_if_supported("-Wall" "")
-    enable_c_compiler_flag_if_supported("-Wextra" "")
-    enable_c_compiler_flag_if_supported("-pedantic" "")
-    enable_c_compiler_flag_if_supported("-Wshadow" "")
+    enable_c_compile_option_if_supported("-Wall" "" "PRIVATE")
+    enable_c_compile_option_if_supported("-Wextra" "" "PRIVATE")
+    enable_c_compile_option_if_supported("-pedantic" "" "PRIVATE")
+    enable_c_compile_option_if_supported("-Wshadow" "" "PRIVATE")
 
-    enable_c_compiler_flag_if_supported("-g" "_DEBUG")
+    enable_c_compile_option_if_supported("-g" "DEBUG" "PUBLIC")
 
-    enable_cxx_compiler_flag_if_supported("-Wall" "")
-    enable_cxx_compiler_flag_if_supported("-Wextra" "")
-    enable_cxx_compiler_flag_if_supported("-pedantic" "")
-    enable_cxx_compiler_flag_if_supported("-Wshadow" "")
-    enable_cxx_compiler_flag_if_supported("-Wno-undef" "")
-    enable_cxx_compiler_flag_if_supported("-fcolor-diagnostics" "")
-    enable_cxx_compiler_flag_if_supported("-fdiagnostics-color=always" "")
-    enable_cxx_compiler_flag_if_supported("-fsized-deallocation" "")
+    enable_cxx_compile_option_if_supported("-Wall" "" "PRIVATE")
+    enable_cxx_compile_option_if_supported("-Wextra" "" "PRIVATE")
+    enable_cxx_compile_option_if_supported("-pedantic" "" "PRIVATE")
+    enable_cxx_compile_option_if_supported("-Wshadow" "" "PRIVATE")
+    enable_cxx_compile_option_if_supported("-Wno-undef" "" "PRIVATE")
+    enable_cxx_compile_option_if_supported("-fcolor-diagnostics" "" "PRIVATE")
+    enable_cxx_compile_option_if_supported("-fdiagnostics-color=always" "" "PRIVATE")
+    enable_cxx_compile_option_if_supported("-fsized-deallocation" "" "PRIVATE")
 
-    enable_cxx_compiler_flag_if_supported("-O0" "_DEBUG")
-    enable_cxx_compiler_flag_if_supported("-g" "_DEBUG")
+    enable_cxx_compile_option_if_supported("-O0" "Debug" "PUBLIC")
+    enable_cxx_compile_option_if_supported("-g" "Debug" "PUBLIC")
 
-    enable_cxx_compiler_flag_if_supported("-O3" "_RELEASE")
-    enable_cxx_compiler_flag_if_supported("-DNDEBUG" "_RELEASE")
-    #enable_cxx_compiler_flag_if_supported("-flto" "_RELEASE")
+    enable_cxx_compile_option_if_supported("-O3" "Release" "PUBLIC")
+    enable_cxx_compile_option_if_supported("-DNDEBUG" "Release" "PUBLIC")
+    #enable_cxx_compile_option_if_supported("-flto" "RELEASE" "PUBLIC")
 
-    enable_cxx_compiler_flag_if_supported("-Os" "_MINSIZEREL")
-    enable_cxx_compiler_flag_if_supported("-DNDEBUG" "_MINSIZEREL")
-    #enable_cxx_compiler_flag_if_supported("-flto" "_MINSIZEREL")
+    enable_cxx_compile_option_if_supported("-Os" "MinSizeRel" "PUBLIC")
+    enable_cxx_compile_option_if_supported("-DNDEBUG" "MinSizeRel" "PUBLIC")
+    #enable_cxx_compile_option_if_supported("-flto" "MinSizeRel" "PUBLIC")
 
-    enable_cxx_compiler_flag_if_supported("-O2" "_RELWITHDEBINFO")
-    enable_cxx_compiler_flag_if_supported("-g" "_RELWITHDEBINFO")
-    #enable_cxx_compiler_flag_if_supported("-flto" "_RELWITHDEBINFO")
+    enable_cxx_compile_option_if_supported("-O2" "RelWithDebInfo" "PUBLIC")
+    enable_cxx_compile_option_if_supported("-g" "RelWithDebInfo" "PUBLIC")
 
     if(USE_LIBCXX)
-        enable_cxx_compiler_flag_if_supported("-stdlib=libc++" "")
-        enable_c_compiler_flag_if_supported("-stdlib=libc++" "")
+        enable_cxx_compile_option_if_supported("-stdlib=libc++" "" "PUBLIC")
+        enable_c_compile_option_if_supported("-stdlib=libc++" "" "PUBLIC")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
     endif()
 
-    message(VERBOSE "C flags: ${CMAKE_C_FLAGS${build_type}}")
-    message(VERBOSE "CXX flags: ${CMAKE_CXX_FLAGS${build_type}}")
+    message(VERBOSE "COMPILE_OPTIONS_PRIVATE: ${COMPILE_OPTIONS_PRIVATE}")
+    message(VERBOSE "COMPILE_OPTIONS_PUBLIC: ${COMPILE_OPTIONS_PUBLIC}")
+    message(VERBOSE "COMPILE_OPTIONS_INTERFACE: ${COMPILE_OPTIONS_INTERFACE}")
     message(VERBOSE " ")
 endif(UNIX)
 
