--- a/tests/core/test_plugin/CMakeLists.txt
+++ b/tests/core/test_plugin/CMakeLists.txt
@@ -17,7 +17,7 @@ if(APPLE AND CMAKE_HOST_APPLE)
             )
 
 endif(APPLE AND CMAKE_HOST_APPLE)
-target_link_libraries(${TEST_PLUGIN_LIB} ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::pybind11 ${BUDDY_LIBRARY})
+target_link_libraries(${TEST_PLUGIN_LIB} hal::core hal::netlist  ${PYTHON_LIBRARIES} pybind11::pybind11 ${BUDDY_LIBRARY})
 install(TARGETS ${TEST_PLUGIN_LIB} LIBRARY DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY})
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/test_plugin/include/)
 if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
