--- a/tests/netlist/CMakeLists.txt
+++ b/tests/netlist/CMakeLists.txt
@@ -24,17 +24,17 @@ add_executable(runTest-boolean_function
         boolean_function.cpp)
 
 
-target_link_libraries(runTest-netlist   gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-gate   gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-net   gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-data_container   gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-endpoint  gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-netlist_internal_manager  gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-module  gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-netlist_factory  gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-gate_library_manager  gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-netlist_serializer  gtest gtest_main ${LINK_LIBS} test_utils)
-target_link_libraries(runTest-boolean_function  gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-netlist   gtest gtest_main hal::core hal::netlist  test_utils)
+target_link_libraries(runTest-gate   gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-net   gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-data_container   gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-endpoint  gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-netlist_internal_manager  gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-module  gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-netlist_factory  gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-gate_library_manager  gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-netlist_serializer  gtest gtest_main hal::core hal::netlist test_utils)
+target_link_libraries(runTest-boolean_function  gtest gtest_main hal::core hal::netlist test_utils)
 
 add_test(runTest-netlist ${CMAKE_BINARY_DIR}/bin/runTest-netlist --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-gate ${CMAKE_BINARY_DIR}/bin/runTest-gate --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
