Fixed Changelog deploy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,8 +47,8 @@ option(BUILD_COVERAGE "Enable code coverage build" OFF)
 option(BUILD_DOCUMENTATION "Create and install the HTML based API documentation")
 option(ENABLE_INSTALL_LDCONFIG "When installing via make/ninja install, also install and run the LDCONFIG post_install scripts" ON)
 option(UPLOAD_PPA "Upload package to ppa" OFF)
-cmake_dependent_option(PACKAGE_DEB "Package DEB Package" ON "UPLOAD_PPA" OFF)
-cmake_dependent_option(ENABLE_PPA "Prepare PPA" ON "UPLOAD_PPA" OFF)
+option(PACKAGE_DEB "Package DEB Package" OFF)
+option(ENABLE_PPA "Prepare PPA" ON )
 option(PACKAGE_TGZ "Package TGZ archive" OFF)
 option(PACKAGE_ZIP "Package ZIP archive" OFF)
 option(PACKAGE_RPM "Package RPM package" OFF)
@@ -64,12 +64,13 @@ if(UNIX AND NOT APPLE)
     detect_distro()
 endif()
 
-# Check for valid Changelog file ToDo
-set(DEB_CHANGELOG_REQUIRED ON)
-set(DEB_CHANGELOG "${CMAKE_CURRENT_SOURCE_DIR}/Changelog")
-unset(CHANGELOG_LAST_VERSION)
-unset(CHANGELOG_LAST_MESSAGE)
-include(DebChangelog)
+# # Check for valid Changelog file ToDo
+# set(DEB_CHANGELOG_REQUIRED ON)
+# set(DEB_CHANGELOG "${CMAKE_CURRENT_SOURCE_DIR}/Changelog")
+# unset(CHANGELOG_LAST_VERSION)
+# unset(CHANGELOG_LAST_MESSAGE)
+# include(DebChangelog)
+# include(Changelog)
 
 # Detect Version Information
 set(hal_GENVERSION_PATH "${CMAKE_SOURCE_DIR}/tools")
@@ -97,7 +98,7 @@ set(PROJECT_WEBSITE "https://github.com/emsec/hal")
 set(PROJECT_MAINTAINER "Sebastian Wallat <sebastian.wallat@rub.de>")
 set(PROJECT_DESCRIPTION_SUMMARY "Hardware Reverse engineering framework")
 set(PROJECT_DESCRIPTION "hal - Hardware Analyzer")
-set(CHANGELOG_MESSAGE ${CHANGELOG_LAST_MESSAGE})
+# set(CHANGELOG_MESSAGE ${CHANGELOG_LAST_MESSAGE})
 set(PROJECT_PPA "ppa:sebastian-wallat/hal")
 set(PROJECT_PPA_USER "sebastian-wallat")
 
