--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -1,4 +1,9 @@
-set(CPACK_GENERATORS)
+if (UPLOAD_PPA)
+    set(PACKAGE_DEB ON)
+    set(ENABLE_PPA ON)
+endif()
+
+set(CPACK_GENERATORS "")
 if(PACKAGE_TGZ)
     list(APPEND CPACK_GENERATORS "TGZ")
 endif()
@@ -68,7 +73,7 @@ if(CPACK_GENERATORS)
         endif()
 
 
-        set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/installer/deb/postinst;${CMAKE_SOURCE_DIR}/installer/deb/postrm")
+        set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/packaging/deb/postinst;${CMAKE_SOURCE_DIR}/packaging/deb/postrm")
         set(CPACK_DEBIAN_PACKAGE_DESCRIPTION ${PROJECT_DESCRIPTION})
         set(CPACK_DEBIAN_PACKAGE_HOMEPAGE ${PROJECT_WEBSITE})
         set(CPACK_DEBIAN_PACKAGE_SECTION libs)
@@ -82,9 +87,6 @@ if(CPACK_GENERATORS)
         if(PROJECT_PPA)
             set(DPUT_HOST ${PROJECT_PPA})
         endif()
-        #set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "any")
-        set(CPACK_DEBIAN_RESOURCE_FILE_CHANGELOG ${CMAKE_SOURCE_DIR}/Changelog)
-        set(CPACK_DEBIAN_UPDATE_CHANGELOG ON)
     endif(PACKAGE_DEB)
 
     if(PACKAGE_TGZ)
