Initial implementation of drag-and-drop (#218)
* Add debug settings page and grid debug mode toggle

* Add fundamentals for layouter-based drag-and-drop

+ Debug option to draw layouter's grid and interpolated extended grid on
the scene as well as calculated grid position of the mouse pointer
- Remove cursor offset calculation
+ Add algorithm to translate scene coordinates into layouter grid
coordinates
+ Move snap-to-grid calculation from the scene to the view
+ Add done() method to the layouter so that callers can check whether
the layouting data is stable
+ Expose default grid dimensions in the layouter

* Optimize coord-to-grid translation algorithm

* Move grid debug trigger from widget to layouter

Also fix parentheses bug allowing modules to be dropped onto themselves

* Fix bug caused by coord translator optimization

* Demonstration for drag-and-drop

+ drag-and-drop is now functional for dragging single gates
- swapping does not yet work (just a matter of typing in the code)
- contains hacky hack for QMap quirks; the hack is degrading logarithmic to linear performance (fix on next meeting)
- we're currently working on eliminating several minor visual glitches

* Properly implement QMap with QPoint keys

This removes the hack from bc5bab9

* Implement gate swapping via drag-and-drop

* Clean up old drag-and-drop code

+ Fix drag shadow jumping when mouse is moved initially
+ Fix some compiler warnings
+ Move detection of valid drop positions from scene to view
+ Base position evaluation on fast layout lookup instead of collision
detection
+ Improve visuals of swap operation
+ Suppress some position calculations where they're not needed

* Fix some TODOs and compiler warnings

* Fix modules losing color on move

* Minimum viable navigation and isolation view handling

* Add preferred starting position to vertical placer

* Improve vertical placement

* slightly cleaned up problematic code

* removed de

--- a/defaults/guidefaults.ini
+++ b/defaults/guidefaults.ini
@@ -31,3 +31,6 @@ python_save_file=Ctrl+Shift+S
 python_save_file_as=Ctrl+Alt+S
 searchbar_toggle=Ctrl+F
 schedule_run=Ctrl+Shift+R
+
+[debug]
+grid=false
